fix: no more horizontal scroll on mobile

--- a/main_welcome.css
+++ b/main_welcome.css
@@ -26,13 +26,14 @@
     white-space: pre-line; /* Add line break for each \n\r */
 }
 
-#welcomeLabels {
+#welcomeLabelsContainer {
     position: relative;
     width: 100%;
     height: 100%;
     justify-content: center;
     align-items: center;
     display: flex;
+    overflow-x: hidden;
 }
 
 #welcomeCookie {
@@ -78,13 +79,13 @@
     /* Welcome Section */
 
     .welcomeLabels h1 {
-        margin-top: 2vh;
-        margin-bottom: 2vh;
-        font-size: 1.8em;
+        margin-top: 1vh;
+        margin-bottom: 1vh;
+        font-size: 1.7em;
     }
     
     .welcomeLabels button {
-        margin-top: 2vh;
+        margin-top: 1vh;
         min-width: 30vw; 
     }
 
